--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -102,7 +102,22 @@ borderimg
     <div class="container">
 
         <p>IT Technologies</p>
-        <p1>Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data,[1] or information, often in the context of a business or other enterprise.[2] IT is considered to be a subset of information and communications technology (ICT). Humans have been storing, retrieving, manipulating, and communicating information since the Sumerians in Mesopotamia developed writing in about 3000 BC,[3] but the term information technology in its modern sense first appeared in a 1958 article published in the Harvard Business Review; authors Harold J. Leavitt and Thomas L. Whisler commented that "the new technology does not yet have a single established name. We shall call it information technology (IT)." Their definition consists of three categories: techniques for processing, the application of statistical and mathematical methods to decision-making, and the simulation of higher-order thinking through computer programs.[4] The term is commonly used as a synonym for computers and computer networks, but it also encompasses other information distribution technologies such as television and telephones. Several products or services within an economy are associated with information technology, including computer hardware, software, electronics, semiconductors, internet, telecom equipment, and e-commerce.[5][a] Based on the storage and processing technologies employed, it is possible to distinguish four distinct phases of IT development: pre-mechanical (3000 BC – 1450 AD), mechanical (1450–1840), electromechanical (1840–1940), and electronic (1940–present).[3] This article focuses on the most recent period (electronic), </p1>
+        <p1>Information technology (IT) is the use of computers to store, retrieve, transmit, and manipulate data,
+         or information, often in the context of a business or other enterprise.
+         IT is considered to be a subset of information and communications technology (ICT). 
+         Humans have been storing, retrieving, manipulating, and communicating information since the Sumerians in 
+         Mesopotamia developed writing in about 3000 BC, but the term information technology in its modern sense 
+         first appeared in a 1958 article published in the Harvard Business Review; authors Harold J. Leavitt and Thomas L. 
+         Whisler commented that "the new technology does not yet have a single established name. 
+         We shall call it information technology (IT)." Their definition consists of three categories: 
+         techniques for processing, the application of statistical and mathematical methods to decision-making, 
+         and the simulation of higher-order thinking through computer programs. 
+         The term is commonly used as a synonym for computers and computer networks, but it also encompasses other 
+         information distribution technologies such as television and telephones. Several products or services 
+         within an economy are associated with information technology, including computer hardware, software, electronics, 
+         semiconductors, internet, telecom equipment, and e-commerce.
+         Based on the storage and processing technologies employed, it is possible to distinguish four distinct phases of 
+         IT development: pre-mechanical (3000 BC – 1450 AD), mechanical (1450–1840), electromechanical (1840–1940), and electronic (1940–present).[3] This article focuses on the most recent period (electronic), </p1>
     </div>
 
     <div class="fixed-footer"> <div class="container">Copyright &copy; 2018 IT technologies</div>
